# worldcup-anomalies

./: .gitignore  README.md  pyproject.toml
notebooks/: _build_notebook.py  world_cup_irregularities.ipynb
tests/: test_anomalies.py  test_draw.py  test_elo.py  test_integration.py  test_intl_elo.py  test_reports.py  test_worldcup_2026.py
worldcup_anomalies/: __init__.py  anomalies.py  draw.py  elo.py  fetch.py  intl_elo.py  leadership.py  models.py  paths.py  referees.py  reports.py  worldcup_2026.py
